--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -3,9 +3,11 @@
 
 ## About the datasets
 
-The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries of a given species' "limits of distribution" [@iucn_iucn_2015], based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A)
+The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A).  <!--The result is essentially an extent of occurrence (EOO) map for the species-->
 
-In contrast, AquaMaps models species distribution based on envelopes of environmental preference, such as temperature, depth, and salinity; these preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@REF] boundaries.   Of the resulting maps, 1296 (5.7%) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
+In contrast, AquaMaps models species distribution based on envelopes of environmental preference, such as temperature, depth, and salinity; these preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@REF] boundaries.  Of the resulting maps, 1296 (5.7%) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
+
+<!--In addition to these methodological differences, the two datasets also differ in intent.  IUCN maps essentially communicate the extent of occurrence (EOO) while AquaMaps uses suitable habitat as an indicator of probability of occurrence, -->
 
 <!--
 ___OMIT: Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., previously, the Ocean Health Index defined presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].  In the 2016 OHI assessment, the presence threshold was eliminated, to better approximate the "extent of occurrence" generally indicated by IUCN maps, since the two datasets are used together.___
@@ -23,7 +25,7 @@ $$\alpha_{dist} = \frac{A_{small \cap large}}{A_{large}} * 100\%$$
 
 $$\alpha_{area} = \frac{A_{small}}{A_{large}} * 100\%$$
 
-For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as means of identifying areas of higher confidence.  Area ratio provides a proxy for frequency of commission and/or omission errors.
+For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as means of identifying areas of higher confidence.  Area ratio provides a proxy for frequency of commission and/or omission errors.  [range area is one critical feature/use of IUCN used as a criterion to help define extinction risk; can AquaMaps provide useful information here as well?]
 
 __(some heading here? to separate from alignment)__
 Corals provide a useful case study to examine differences in species range alignment.  They are an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed; their dependence on photosynthesis provides habitat-limiting life history traits, and they don't tend to move.  Extracting data from the IUCN API [@REF?] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none are found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig 2, we created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
