--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -22,7 +22,7 @@ PLOS ONE editorial decisions do not rely on perceived significance or impact, so
 
 > __Fig 1.__ (A) Number and proportion of species by taxa included in each dataset.  Overlapping species are dominated by bony fishes (`r format(n_bonyfish, big.mark = ',')` species, primarily tropical taxa) and corals (`r format(n_corals, big.mark = ',')` species).  (B, C) Global marine species count per 0.5° cell according to (B) AquaMaps and (C) IUCN.  The margin frequency plots show relative species count per cell at each latitude and longitude. 
 
-<!-- need discussion here? [discussion] Each dataset offers spatial information on a -->
+[ideas for discussion here? each provides information unavailable in the other; in addition to considerations about the nature of each dataset, the species and regions covered are an important consideration in which dataset to use]
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
@@ -82,7 +82,7 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 
 [results/discussion] Species found in the lower right quadrant (n = `r n_q3`) seem to represent cases of "two wrongs make a right."  For these species, IUCN and AquaMaps both predict ranges extending far beyond the overlapping region, but the methodological differences result in very different extrapolations.   Consequently, area ratios are close to 100%, though the poor distribution alignment indicates that one or both datasets are introducing significant errors. As above, further analysis is required to disentangle the causes of error.
 
-[results] The lower left quadrant includes species (n = `r n_q4`) where alignment is poor in both dimensions.  Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  It is not surprising that range maps based upon fewer observations bear greater uncertainty.
+[results] The lower left quadrant includes species (n = `r n_q4`) where alignment is poor in both dimensions.  Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  In addition, the AquaMaps dataset offers a quality metric based on the number of unique cells containing valid occurrences; for this quadrant, the median "occurcells" is 11 compared to a median of 40 across the other three quadrants.  Care should be taken when using distribution and range maps based upon fewer observations, as they clearly bear greater uncertainty; AquaMaps explicitly recommends using any of its maps generated with an "occurcells" count fewer than 10 [@AquaMapsXXX].
 
 ## Coral depth exploration
 
@@ -94,7 +94,7 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 
 [results] In constraining coral ranges to shallow waters, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps.  Using the original quadrant definitions from Fig 2B, we see in Fig 3B a massive shift in 354 paired-map coral species due to constraining coral depths to 200 m.  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  See Fig SXXX to examine the shifts of individual species among the quadrants.
 
-[discussion] We cannot know for certain the true distribution of each of these corals; much of the apparent over-expansion of coral ranges may be due to experts taking a precautionary approach.  But a sensible shift in method drastically decreases the likelihood of introducing commission errors, with little chance of introducing omission errors, greatly improving our confidence in the remaining reported ranges.  Note that this change applies just as well to the IUCN coral maps that are not included in the paired map analysis, and likely to other reef-associated flora and fauna.  While species depth preferences are an easy and consistent means of constraining range predictions, other conditions such as salinity and temperature could be cautiously used to refine the results of expert opinions.
+[discussion] We cannot know for certain the true distribution of each of these corals; certainly some commission errors result from satisfying the connectivity requirements of an EOO, and others may be due to experts taking a precautionary approach.  But a sensible shift in method drastically decreases the likelihood of introducing commission errors, with little chance of introducing omission errors, greatly improving our confidence in the remaining reported distributions for most purposes.  Note that this change applies just as readily to the IUCN coral maps that are not included in the paired map analysis, and likely to other reef-associated flora and fauna.  While species depth preferences are an easy and consistent means of constraining range predictions, other conditions such as salinity and temperature could be cautiously used to refine the results of expert opinions.
 
 ## Georegional constraint exploration
 
@@ -102,7 +102,7 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 
 > __Fig 4.__ Composite map showing AquaMaps predicted ranges for 512 species whose equatorial range (between 5° S and 25° N) encounters a western limit exactly at 175° W, the boundary between FAO Major Fishing Areas 71 and 77.  The range maps for these species conform exactly to the bounds of Area 71, as a result of AquaMaps using FAO areas as a rough georegional constraint on species ranges.  The boundary of Area 57 creates an additional clear exclusion zone for most of these species, despite the fact that this was not used as a selection criteria.
 
-[discussion] FAO Major Fishing Area boundaries provide a readily available method to roughly contrain AquaMaps predictions to appropriate ocean basins, enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd species range predictions where otherwise suitable habitat encounters border between regions.  While such an odd boundary would likely be obvious when inspecting ranges of individual species, the distinction is likely to be obscured when many species ranges are aggregated as is typical for biodiversity or conservation studies.  Applying an additional spatial constraint based upon ecological or environmental boundaries, such as Marine Ecoregions of the World [@REF???], may help boost confidence in these predicted ranges; expert review, though time-consuming, is certain to improve confidence in these predicted ranges.
+[discussion] FAO Major Fishing Area boundaries provide a readily available method to roughly contrain AquaMaps predictions to appropriate ocean basins, thus eliminating a large source of potential commission errors and enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd species range predictions where otherwise suitable habitat is omitted where it encounters border between regions.  While such an odd boundary would likely be obvious when inspecting the distribution of an individual species, the distinction is likely to be obscured when aggregating many species ranges as is typical for biodiversity or conservation studies.  Applying an ecoregional spatial constraint, such as Marine Ecoregions of the World [@REF???], may reduce commission errors on these questionable margins, boosting confidence in these predicted distributions; expert review, though time-consuming, is the most certain route to improving the quality of these maps.
 
 <!-- ## Case Studies
 
@@ -159,18 +159,10 @@ We recalculated the amount of under-protected and gap species using either IUCN 
 
 [discussion?]
 
+[can this wrap up the results/discussion?] To achieve more comprehensive global coverage of species ranges these two datasets can be used together, understanding that the underlying differences complicate such direct comparisons.  Major considerations include aligning the criteria used to determine "presence" (e.g. selecting an appropriate presence threshold for AquaMaps; _a presence threshold of 0% most closely approximates the "limits of distribution" criterion described by IUCN range maps_ ___- not really discussed or backed up here___) and addressing mechanisms that introduce errors of commission and omission. ___as it stands, this paper really doesn't go into combining datasets and how to do it; omit this paragraph?___
+
 # Conclusions
 
 No spatial dataset can ever claim to know the "truth" of the whole of marine biodiversity.  AquaMaps and IUCN range maps show strong agreement for many well-studied species, but substantial differences illustrate uncertainty in our understanding of spatial distribution for many others.  Although many other approaches exist for species distribution modeling, these two are the largest approaches applied globally across a broad range of marine taxa.  Method-driven differences in commission and omission errors produce clear and significant disagreement in species range descriptions between AquaMaps and IUCN datasets.  Conclusions drawn from each of these datasets would paint dramatically different pictures of global marine biodiversity or the effectiveness of conservation management decisions.  Identifying and addressing differences in these datasets will increase their utility for research and conservation actions.
 
-For IUCN range data, clipping ranges to known depth limits improves confidence in predicted ranges for coral species; similarly, depth may be a useful characteristic to consider for other reef-associated organisms.  Other parameters such as salinity and temperature may provide useful constraints on other taxa to bolster and refine expert opinion.  Simple but conservative rules of thumb will likely reduce commission errors without introducing substantial omission errors.
-
-For AquaMaps range data, dependent primarily on environmental and physical preferences and conditions, implementing area restrictions based on biogeographical criteria such as Marine Ecoregions of the World [@spalding_marine_2007], rather than political and economic criteria such as FAO Major Fishing Areas, would likely decrease commission errors and improve predictive power, especially for data-poor species.
- 
-For either data set, maps based on few occurrences are more likely to bear high uncertainty in range predictions.  Occurrence counts from external sources such as OBIS or GBIF can help identify relatively data-poor species; additionally, the "occurcells" attribute in the AquaMaps data set, which counts the number of half-degree cells used to generate the environmental envelope for each species, can be used in a similar manner.  The only certain remedy for data-poor species, of course, is further research.
-
-<!-- ___OMIT:___ _Many studies using AquaMaps data test the sensitivity of results by varying the probability of occurrence threshold to determine presence.  This decision ultimately represents a tradeoff between errors of commission (low threshold) and omission (high threshold).  Using AquaMaps in conjunction with IUCN can mitigate potential errors, while also increasing the taxonomic and spatial breadth of coverage, as long as the differences between the datasets can be reasonably minimized.  In this case, a presence threshold of 0% most closely approximates the "limits of distribution" criterion defined by IUCN data providers._ -->
-
-To achieve more comprehensive global coverage of species ranges these two datasets can be used together, understanding that the underlying differences complicate such direct comparisons.  Major considerations include aligning the criteria used to determine "presence" (e.g. selecting an appropriate presence threshold for AquaMaps; _a presence threshold of 0% most closely approximates the "limits of distribution" criterion described by IUCN range maps_ ___- not really discussed or backed up here___) and addressing mechanisms that introduce errors of commission and omission. ___as it stands, this paper really doesn't go into combining datasets and how to do it; omit this paragraph?___
-
-Effective management and protection of marine species depends on a robust understanding of where species exist and where they do not; without this knowledge we risk wasting resources protecting low-value regions while missing opportunities to protect critical ones. By identifying the differences between these two fundamental marine species range datasets and understanding the likely mechanisms causing these discrepancies, we improve our ability to develop strategic and effective conservation policy that supports a resilient ocean ecosystem.
+Effective management and protection of marine species depends on a robust understanding of where species exist and where they do not; without this knowledge we risk wasting resources protecting low-value regions while missing opportunities to protect critical ones. By identifying the differences between these two important and fundamentally different marine species range datasets and understanding the likely mechanisms causing these discrepancies, we improve our ability to develop strategic and effective conservation policy that supports a resilient ocean ecosystem.
