--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -1,5 +1,5 @@
 ---
-output: pdf_document
+output: html_document
 ---
 
 <!--
@@ -13,24 +13,32 @@ The introduction should:
 
 # Introduction
 
-Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation.  This body of science has resulted in various compiled databases of species distribution maps which provide foundational information for understanding species ranges and diversity, predicting species responses to human impacts and climate change, and managing and protecting species effectively.  No species range dataset can claim to represent the "truth" of any species' spatial distribution, but rather each offers its own distinct and often divergent understanding of the "true" distribution.  Despite the uncertainty and variation among species range datasets, conservation managers and policy makers must act on conclusions drawn from these data.  It is critical to understand the differences in spatial range datasets and the implications of these differences on conservation decisions.
+Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation.  This body of science has resulted in various compiled databases of species distribution and range maps which provide foundational information for understanding species diversity and extinction risk, predicting species responses to human impacts and climate change, and managing and protecting species effectively.  No species range dataset can claim to represent the "truth" of any species' spatial distribution, but rather each offers its own distinct understanding of that latent distribution.  These varying predictions of species presence and absence, driven by intent and methodology, can result in very different predictions of species presence; however, conservation managers and policy makers must base their actions on conclusions drawn from these imperfect datasets.  It is critical to understand the differences in spatial range datasets and the implications of these differences for conservation research and decision-making.
 
-<!--implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.-->
+The two most comprehensive, widely-used global-scale repositories that predict marine species ranges throughout the world's oceans are AquaMaps, which rely primarily on model predictions [@kaschner_aquamaps:_2015], and range data from the International Union for Conservation of Nature (IUCN), which rely primarily on expert opinion [@iucn_iucn_2015].  The two datasets are designed to serve different purposes:  IUCN range maps are drawn to estimate extent of occurrence (EOO) [@GastonXXX 1994], communicating range size as an [indicator/factor/criterion] for extinction risk assessments [@IUCNXXX]; AquaMaps essentially communicate the area of occupancy (AOO) [@REFXXX] of a species based on habitat suitability [@AquaMapsXXX]. 
 
-The two most comprehensive, widely-used global-scale repositories that predict marine species ranges throughout the world's oceans are AquaMaps, which rely primarily on model predictions [@kaschner_aquamaps:_2015], and range data from the International Union for Conservation of Nature (IUCN), which rely primarily on expert opinion [@iucn_iucn_2015].  Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: geographic range data such as IUCN range maps frequently introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps will likely introduce fewer commission errors at the expense of more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008].  
+The fundamental differences between the datasets (EOO versus AOO, measure of range size versus distribution) suggest that the choice of one over the other should be carefully matched to the purpose for which it is to be used [@GastonXXX 2008, XXX Other refs], and yet these datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.
 
-These two spatial datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.
+<!--
+_The fundamental differences between the intent of the two datasets precludes casual interchangeability between the two [@GastonXXX 2008], and yet they_
+
+_"The two measures (EOO and AOO) serve different purposes, and should not be regarded as alternatives that simply differ in accuracy" - Gaston et al 2004 - literature suggests that this distinction precludes casual interchangeability between the two [@gastonXXX 2008]; they have specific purposes.  And yet they get used, with no explicit acknowldegment of the difference, for a wide range of conservation studies.  It's important to understand the implications and measures to help adapt them to specific uses._
+-->
+
+Here we focus not on how the two datasets should ideally be used; instead, in recognizing that each provides value for many aspects of conservation research, we highlight hidden assumptions and sources of error within each dataset, and explore the implications of choosing one over the other.
+
+Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: extent of occurrence range data such as IUCN range maps will inevitably introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps are expected to introduce fewer commission errors at the expense of more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008].  
 
 To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of the `r format(n_spp_all, big.mark = ',')` marine species mapped by one or both datasets.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  Yet the small overlap in mapped species between the two datasets means each provides unique value in taxonomic and geographic coverage. 
 
-Although relatively small in number, these overlap species present a unique opportunity to evaluate the two datasets overall.  As understanding of a given species improves, we expect that range maps, regardless of method, would become more accurate in predicting species presence and absence.  Close alignment between two independent range maps can therefore indicate higher confidence in species presence or absence than a single map.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align in both distribution and overall area.
+Although relatively small in number, these overlap species present a unique opportunity to evaluate the two datasets overall.  As understanding of a given species improves, we expect that range maps, regardless of method, would more closely approach the true distribution in predicting species presence and absence.  Close alignment between two independent range maps can therefore indicate higher confidence in species presence or absence than a single map.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align in both spatial distribution and overall area.
 
-Using this alignment framework, we explore methodological issues that can introduce errors, and suggest methods to improve confidence in species range predictions.  In particular, we show how explicitly using depth as a constraint on coral ranges in IUCN range data dramatically improves concurrence with AquaMaps data, ___and highlight a side effect of AquaMaps methodology that results in surprising species range boundaries.___
+Using this alignment framework, we explore methodological issues that can introduce errors, and suggest methods to improve confidence in species range predictions.  In particular, we show how explicitly using depth as a constraint on coral ranges in IUCN range data dramatically mitigates a source of commission error, and highlight a side effect of AquaMaps methodology that results in potentially unexpected species range boundaries.
 
 <!--
 We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015] and a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.  
 -->
 
-As a case study, we then reexamine a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as a case study to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.  
+As a case study, we then reexamine a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] as a case study to explore the implications of selecting one data set over the other.  Repeating the study using IUCN range data rather than AquaMaps data increases the apparent proportion of gap species from 1.4% to 6.4%, while also increasing the proportion of well-protected species from 1.5% to 2.9%.  This shift highlights the implications of different data use decisions on our understanding of marine biodiversity status and protection.  
 
 While we have identified some potential issues in each dataset, we cannot simply recommend one data set over the other.  Instead, we recommend simple methods to account for incidence of errors in each dataset, improving confidence in species range predictions to better inform conservation management and policy decisions.
